[package]
name = "echo"
version = "0.1.0"
authors = ["Inês Sequeira <ines.sequeira@tecnico.ulisboa.pt>", "Miguel Matos <miguel.marques.matos@tecnico.ulisboa.pt>"]
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[features]
default = ["corten/checkpointing", "corten/checkpointing_on_ctrlc", "num-bigint/serde", "num-bigint/rand"]

[dependencies]
corten = { path = "../corten" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = "^1.0.38"
rand="0.6.0"
rand_xorshift = "0.1.1"
typetag = "0.1.0"
num-bigint = "0.2.2"
num-traits = "0.2.8"
argparse = "0.2.1"
