[package]
name = "corten"
version = "0.2.0"
authors = ["Inês Sequeira <ines.sequeira@tecnico.ulisboa.pt>", "Miguel Matos <miguel.marques.matos@tecnico.ulisboa.pt>"]
license = "Apache-2.0"
readme = "../README.md"
edition = "2018"
keywords = ["distributed algorithms", "simulation", "large scale", "evaluation"]

[features]
default = ["checkpointing", "checkpointing_on_ctrlc"]

checkpointing = ["rng_serde1", "heap_serde1"]
rng_serde1 = ["rand_xorshift/serde1"]
heap_serde1 = ["binary-heap-plus/serde1"]

checkpointing_on_ctrlc = ["checkpointing", "ctrlc"]

test_async = []
test_network = []
test_churn = []

[dependencies]
rand="0.6.0"
rand_xorshift = "0.1.1"
binary-heap-plus = "0.1.5"
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = "^1.0.38"
serde_yaml = "0.8"
typetag = "0.1.0"
bincode = "1.1.3"
ctrlc = { version = "3.1.2", optional = true }
objekt = "0.1.2"
